--- a/blog.html
+++ b/blog.html
@@ -420,7 +420,7 @@ overflow-x: hidden;
       </div>
     </div>
   </div>
-  <div class="loading-state-v2" style="background-color: white; display: flex !important;">
+  <div class="loading-state-v2" style="background-color: white; display: nonr !important;">
     <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="200" height="200px" viewBox="0 0 256 256">
       <defs>
       </defs>
@@ -432,8 +432,7 @@ overflow-x: hidden;
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://unpkg.com/showdown/dist/showdown.min.js" type="text/javascript"></script>
   <script src="js/other/misc.js" type="text/javascript"></script>
-  <script>
-      document.querySelector('.loading-state-v2').remove
+  <!--<script>
 window.onload = async () => {  
 
     Wized.request.await("Load Blog", (response) => {  
@@ -460,7 +459,7 @@ window.onload = async () => {
         });
     setTimeout(() => {document.querySelector('.loading-state-v2').style.display = "none"}, 2000);
 };
-</script>
+</script>-->
 <script src="js/user/userStripe.js" type="text/javascript"></script>
 </body>
 </html>
